getFiltersList
